--- a/source/layout.slim
+++ b/source/layout.slim
@@ -14,7 +14,7 @@ html
       
         nav
           ul
-            li== link_to "Installation", "guides/installation.html"
+            li== link_to "Getting Started", "guides/getting-started.html"
             li== link_to "Templating Engines", "guides/templating.html"
             li== link_to "Static Blogs", "guides/blogs.html"
             li== link_to "Local Data Sources (YAML)", "guides/local-yaml-data.html"
