prep self-hosting version

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -24,7 +24,7 @@ html
               li== link_to "Basics of Templates, Includes and Layouts", "/guides/basics-of-templates.html"
               li== link_to "HTML Templating with Haml, Slim, Markdown and More"
               li== link_to "CSS, SASS and SCSS"
-              li== link_to "Javascript and CoffeeScript"
+              li== link_to "Javascript, CoffeeScript and Sprockets"
               li== link_to "Frontend Optimization", "/guides/optimization.html"
 
               /li== link_to "Local Data Sources (YAML)", "/guides/local-yaml-data.html"
