--- a/source/layout.slim
+++ b/source/layout.slim
@@ -3,13 +3,18 @@ html
   head
     meta charset="utf-8"
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
+    link href='/blog/feed.xml' rel='alternate' title='Middleman Blog' type='application/atom+xml'
     
     == stylesheet_link_tag :site
+    title
+      | Middleman Guides
+      - if data.page.title
+        | : #{data.page.title}
     
   body
     #frame
       header
-        h1 Middleman Guides
+        h1== link_to "Middleman Guides", "/"
         h2 Hand-crafted tutorials for static frontend development
         
       .container
@@ -17,26 +22,50 @@ html
           == yield
       
         aside
-          h3 More Guides
+          h3 All Guides
           nav
             ul
               li== link_to "Getting Started", "/guides/getting-started.html"
+              / li== link_to "Migrating to Middleman 2.0"
               li== link_to "Basics of Templates, Includes and Layouts", "/guides/basics-of-templates.html"
-              li== link_to "HTML Templating with Haml, Slim, Markdown and More"
-              li== link_to "CSS, SASS and SCSS"
-              li== link_to "Javascript, CoffeeScript and Sprockets"
-              li== link_to "Frontend Optimization", "/guides/optimization.html"
-
-              /li== link_to "Local Data Sources (YAML)", "/guides/local-yaml-data.html"
+              / li== link_to "CSS, SASS and SCSS"
+              / li== link_to "Javascript, CoffeeScript and Sprockets"
+              / li== link_to "Frontend Optimization", "/guides/optimization.html"
+              / li== link_to "Local Data Sources (YAML)", "/guides/local-yaml-data.html"
               /li== link_to "Remote Data Sources (REST)", "/guides/remote-data.html"
               /li== link_to "Static Blogs", "/guides/blogs.html"
               /li== link_to "Development API Proxies", "/guides/proxies.html"
               /li== link_to "Custom Extensions", "/guides/extensions.html"
               /li== link_to "Rack Middleware", "/guides/rack-middleware.html"
-
-          | This site is itself a Middleman project. Fork and contribute to the guides at: https://github.com/tdreyno/middleman-guides
+          
+          h3 Blog Posts
+          ul
+            - data.blog.articles.each do |article|
+              li
+                small== article.date.strftime('%b %e')
+                br
+                == link_to article.title, article.url
         
       footer
-        | Copyright
+        markdown:
+          This site is itself a Middleman project.<br />
+          Fork and contribute to the guides [on GitHub].
+          [on GitHub]: https://github.com/tdreyno/middleman-guides
       
-    == javascript_include_tag :site
+      | <a href="http://github.com/tdreyno/middleman"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://gs1.wac.edgecastcdn.net/80460E/assets/img/71eeaab9d563c2b3c590319b398dd35683265e85/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub"></a>
+      
+    /== javascript_include_tag :site
+
+    | <!-- Google Analytics -->
+    | <script type="text/javascript">
+    |   var _gaq = _gaq || [];
+    |   _gaq.push(['_setAccount', 'UA-90027-21']);
+    |   _gaq.push(['_trackPageview']);
+    |
+    |   (function() {
+    |     var ga = document.createElement('script');
+    |     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    |     ga.setAttribute('async', 'true');
+    |     document.documentElement.firstChild.appendChild(ga);
+    |   })();
+    | </script>
