--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -24,9 +24,13 @@ header
   +column(16)
   +append(1)
   -webkit-hyphens: auto
+
+.highlight
+  border-left: 2px solid #ccc
+  padding: 0.5em 1em
+  margin: 1.5em 0
   pre
-    border-left: 2px solid #ccc
-    padding-left: 1em
+    margin: 0
 
 aside
   +column(7, true)
