--- a/source/layout.slim
+++ b/source/layout.slim
@@ -33,6 +33,7 @@ html
               / li== link_to "CSS, SASS and SCSS"
               / li== link_to "Javascript, CoffeeScript and Sprockets"
               / li== link_to "Frontend Optimization", "/guides/optimization.html"
+              / li== link_to "LiveReload", ""
               / li== link_to "Local Data Sources (YAML)", "/guides/local-yaml-data.html"
               /li== link_to "Remote Data Sources (REST)", "/guides/remote-data.html"
               /li== link_to "Static Blogs", "/guides/blogs.html"
