--- a/source/layout.slim
+++ b/source/layout.slim
@@ -28,7 +28,7 @@ html
           nav
             ul
               li== link_to "Getting Started", "/guides/getting-started.html"
-              / li== link_to "Migrating to Middleman 2.0"
+              li== link_to "Migrating to Middleman 2.0", "/guides/migrating.html"
               li== link_to "Basics of Templates, Includes and Layouts", "/guides/basics-of-templates.html"
               / li== link_to "CSS, SASS and SCSS"
               / li== link_to "Javascript, CoffeeScript and Sprockets"
