--- a/source/layout.slim
+++ b/source/layout.slim
@@ -30,7 +30,7 @@ html
               li== link_to "Getting Started", "/guides/getting-started.html"
               li== link_to "Migrating to Middleman 2.0", "/guides/migrating.html"
               li== link_to "Basics of Templates, Includes and Layouts", "/guides/basics-of-templates.html"
-              / li== link_to "CSS, SASS and SCSS"
+              li== link_to "Sass and Compass", "/guides/sass-and-compass.html"
               / li== link_to "Javascript, CoffeeScript and Sprockets"
               / li== link_to "Frontend Optimization", "/guides/optimization.html"
               / li== link_to "LiveReload", ""
