--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -25,12 +25,11 @@ header
   +append(1)
   -webkit-hyphens: auto
 
-.highlight
+pre
+  background: #F8F8F8
   border-left: 2px solid #ccc
   padding: 0.5em 1em
   margin: 1.5em 0
-  pre
-    margin: 0
 
 aside
   +column(7, true)
