--- a/source/layout.slim
+++ b/source/layout.slim
@@ -31,13 +31,14 @@ html
               li== link_to "Migrating to Middleman 2.0", "/guides/migrating"
               li== link_to "Basics of Templates, Includes and Layouts", "/guides/basics-of-templates"
               li== link_to "Sass and Compass", "/guides/sass-and-compass"
+              li== link_to "Dynamic Pages", "/guides/dynamic-pages"
+              li== link_to "Pretty URLs (Directory Indexes)", "/guides/pretty-urls"
               / li== link_to "Javascript, CoffeeScript and Sprockets"
               / li== link_to "Frontend Optimization", "/guides/optimization"
-              / li== link_to "LiveReload", ""
+              li== link_to "LiveReload", "/guides/livereload"
               / li== link_to "Local Data Sources (YAML)", "/guides/local-yaml-data"
               /li== link_to "Remote Data Sources (REST)", "/guides/remote-data"
               /li== link_to "Static Blogs", "/guides/blogs"
-              /li== link_to "Development API Proxies", "/guides/proxies"
               /li== link_to "Custom Extensions", "/guides/extensions"
               /li== link_to "Rack Middleware", "/guides/rack-middleware"
           
