--- a/source/layout.slim
+++ b/source/layout.slim
@@ -60,9 +60,7 @@ html
           Fork and contribute to the guides [on GitHub].
           [on GitHub]: https://github.com/tdreyno/middleman-guides
       
-      | <a href="http://github.com/tdreyno/middleman"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://gs1.wac.edgecastcdn.net/80460E/assets/img/71eeaab9d563c2b3c590319b398dd35683265e85/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub"></a>
-      
-    /== javascript_include_tag :site
+      | <a href="http://github.com/tdreyno/middleman"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/71eeaab9d563c2b3c590319b398dd35683265e85/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub"></a>
 
     | <!-- Google Analytics -->
     | <script type="text/javascript">
