--- a/source/layout.slim
+++ b/source/layout.slim
@@ -33,8 +33,8 @@ html
               li== link_to "Sass and Compass", "/guides/sass-and-compass"
               li== link_to "Dynamic Pages", "/guides/dynamic-pages"
               li== link_to "Pretty URLs (Directory Indexes)", "/guides/pretty-urls"
-              / li== link_to "Javascript, CoffeeScript and Sprockets"
-              / li== link_to "Frontend Optimization", "/guides/optimization"
+              li== link_to "Javascript, CoffeeScript and Sprockets", "/guides/js-coffee-and-sprockets"
+              li== link_to "Frontend Optimization", "/guides/frontend-optimization"
               li== link_to "LiveReload", "/guides/livereload"
               / li== link_to "Local Data Sources (YAML)", "/guides/local-yaml-data"
               /li== link_to "Remote Data Sources (REST)", "/guides/remote-data"
