switch pygments theme, use directory_indexes

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -6,7 +6,7 @@ html
     link href='/blog/feed.xml' rel='alternate' title='Middleman Blog' type='application/atom+xml'
     
     == stylesheet_link_tag :site
-    == stylesheet_link_tag "pygments/default"
+    == stylesheet_link_tag "pygments/solarized"
     
     title
       | Middleman Guides
