--- a/source/layout.slim
+++ b/source/layout.slim
@@ -15,15 +15,12 @@ html
     
   body
     #frame
-      header
-        h1== link_to "Middleman Guides", "/"
-        h2 Hand-crafted tutorials for static frontend development
-        
       .container
-        article#main role="main"
-          == yield
-      
         aside
+          header
+            h1== link_to "Middleman", "/"
+            h4 Hand-crafted static frontend development
+
           h3 All Guides
           nav
             ul
@@ -53,14 +50,15 @@ html
           h3 Other
           ul
             li== link_to "Sites Built Using Middleman", "/built-using-middleman"
-        
-      footer
-        markdown:
-          This site is itself a Middleman project.<br />
-          Fork and contribute to the guides [on GitHub].
-          [on GitHub]: https://github.com/tdreyno/middleman-guides
-      
-      | <a href="http://github.com/tdreyno/middleman"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://a248.e.akamai.net/assets.github.com/img/71eeaab9d563c2b3c590319b398dd35683265e85/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub"></a>
+
+          footer
+            markdown:
+              This site is itself a Middleman project.<br />
+              Fork and contribute to the guides [on GitHub].
+              [on GitHub]: https://github.com/tdreyno/middleman-guides
+              
+        article#main role="main"
+          == yield
 
     | <!-- Google Analytics -->
     | <script type="text/javascript">
