more guides, <code> blocks

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -28,18 +28,19 @@ html
             ul
               li== link_to "Getting Started", "/guides/getting-started"
               li== link_to "Migrating to Middleman 2.0", "/guides/migrating"
-              li== link_to "Basics of Templates, Includes and Layouts", "/guides/basics-of-templates"
+              li== link_to "Templates, Layouts and Partials", "/guides/templates-layouts-partials"
               li== link_to "Sass and Compass", "/guides/sass-and-compass"
+              li== link_to "Javascript, CoffeeScript and Sprockets", "/guides/js-coffee-and-sprockets"
               li== link_to "Dynamic Pages", "/guides/dynamic-pages"
               li== link_to "Pretty URLs (Directory Indexes)", "/guides/pretty-urls"
-              li== link_to "Javascript, CoffeeScript and Sprockets", "/guides/js-coffee-and-sprockets"
               li== link_to "Frontend Optimization", "/guides/frontend-optimization"
+              li== link_to "Individual Page Configuration (YAML Frontmatter)", "/guides/individual-page-configuration"
               li== link_to "LiveReload", "/guides/livereload"
-              / li== link_to "Local Data Sources (YAML)", "/guides/local-yaml-data"
+              li== link_to "Local YAML Data", "/guides/local-yaml-data"
               /li== link_to "Remote Data Sources (REST)", "/guides/remote-data"
               /li== link_to "Static Blogs", "/guides/blogs"
               li== link_to "Custom Extensions", "/guides/extensions"
-              /li== link_to "Rack Middleware", "/guides/rack-middleware"
+              li== link_to "Rack Middleware", "/guides/rack-middleware"
           
           h3 Blog Posts
           ul
