--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -43,7 +43,9 @@ aside
   width: 225px
   +append(1)
   h1
-    +replace-text-with-dimensions("mm-blue-w-text.png")
+    a
+      display: block
+      +replace-text-with-dimensions("mm-blue-w-text.png")
 
 footer
   border-top: 1px solid #ccc
