--- a/source/layout.slim
+++ b/source/layout.slim
@@ -57,8 +57,15 @@ html
           footer
             markdown:
               This site is itself a Middleman project.
-              Fork &amp; contribute [on GitHub].
+              Fork &amp; contribute [on GitHub].<br /><br />
+              
+              Middleman is open-source software licensed under the [MIT License].<br /><br />
+              
+              &copy; 2011 [Thomas Reynolds]
+              
               [on GitHub]: https://github.com/tdreyno/middleman-guides
+              [Thomas Reynolds]: http://awardwinningfjords.com
+              [MIT License]: https://github.com/tdreyno/middleman/blob/master/LICENSE
               
         article#main role="main"
           == yield
