--- a/source/layout.slim
+++ b/source/layout.slim
@@ -3,7 +3,6 @@ html
   head
     meta charset="utf-8"
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
-    link href='/blog/feed.xml' rel='alternate' title='Middleman Blog' type='application/atom+xml'
     
     == stylesheet_link_tag :site
     == stylesheet_link_tag "pygments/solarized"
@@ -23,18 +22,17 @@ html
             h1== link_to "Middleman", "/"
             h4 Hand-crafted frontend development
 
-          h3 All Guides
           nav
             ul
               li== link_to "Getting Started", "/guides/getting-started"
               li== link_to "Migrating to Middleman 2.0", "/guides/migrating"
-              li== link_to "Templates, Layouts and Partials", "/guides/templates-layouts-partials"
+              li== link_to "Templates, Layouts &amp; Partials", "/guides/templates-layouts-partials"
               li== link_to "Sass and Compass", "/guides/sass-and-compass"
-              li== link_to "Javascript, CoffeeScript and Sprockets", "/guides/js-coffee-and-sprockets"
+              li== link_to "CoffeeScript &amp; Sprockets", "/guides/coffeescript-sprockets"
               li== link_to "Dynamic Pages", "/guides/dynamic-pages"
-              li== link_to "Pretty URLs (Directory Indexes)", "/guides/pretty-urls"
+              li== link_to "Pretty URLs", "/guides/pretty-urls"
               li== link_to "Frontend Optimization", "/guides/frontend-optimization"
-              li== link_to "Individual Page Configuration (YAML Frontmatter)", "/guides/individual-page-configuration"
+              li== link_to "Individual Page Configuration", "/guides/individual-page-configuration"
               li== link_to "LiveReload", "/guides/livereload"
               li== link_to "Local YAML Data", "/guides/local-yaml-data"
               /li== link_to "Remote Data Sources (REST)", "/guides/remote-data"
@@ -42,33 +40,21 @@ html
               li== link_to "Custom Extensions", "/guides/extensions"
               li== link_to "Rack Middleware", "/guides/rack-middleware"
           
-          h3 Blog Posts
-          ul
-            - data.blog.articles.each do |article|
-              li
-                small== article.date.strftime('%b %e')
-                br
-                == link_to article.title, article.url.gsub(/\.html$/, "")
-          
-          h3 Other
-          ul
-            li== link_to "Sites Built Using Middleman", "/built-using-middleman"
+              li.div== link_to "Sites Built Using Middleman", "/built-using-middleman"
 
           footer
             markdown:
-              This site is itself a Middleman project.
-              Fork &amp; contribute [on GitHub].<br /><br />
+              &copy; 2011 [Thomas Reynolds].<br />
+              Middleman is open-source software licensed under the [MIT License].
               
-              Middleman is open-source software licensed under the [MIT License].<br /><br />
-              
-              &copy; 2011 [Thomas Reynolds]
-              
-              [on GitHub]: https://github.com/tdreyno/middleman-guides
               [Thomas Reynolds]: http://awardwinningfjords.com
               [MIT License]: https://github.com/tdreyno/middleman/blob/master/LICENSE
               
         article#main role="main"
           == yield
+          - if is_guide_page?
+            footer
+              == link_to "Fork and edit this guide on Github", edit_guide_url
 
     | <!-- Google Analytics -->
     | <script type="text/javascript">
