--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -1,5 +1,4 @@
 @import "compass"
-@import "blueprint"
 
 $link-color: #002b36
 $link-visited-color: $link-color
@@ -8,45 +7,79 @@ $link-focus-color: $link-color
 $link-active-color: $link-color
 
 $blueprint-font-size: 14px
+//$blueprint-font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif
+$blueprint-grid-columns: 22
+
+@import "blueprint"
 +blueprint-typography
 
+tt, code
+  background: #002b36
+  color: #efe8d5
+  +border-radius(4px)
+  +box-shadow(black 0 1px 1px inset, white 0 1px 0)
+  //-webkit-font-smoothing: antialiased
+  padding: 3px 4px
+  
 body
   text-rendering: optimizeLegibility
   background: #efe8d5
+  margin: 0
   
 #frame
   +container
 
 .container
-  +clearfix
-
-header
-  border-bottom: 1px solid #ccc
-  h1
-    text-align: center
-    margin-bottom: 0
-  h4
-    text-align: center
-    margin-top: 0
-
-#main
-  +column(17, true)
-
-pre
-  background: #F8F8F8
-  border-left: 2px solid #ccc
-  padding: 0.5em 1em
-  margin: 1.5em 0
+  +pie-clearfix
+  position: relative
 
 aside
-  +column-base
+  position: fixed
   width: 225px
-  +append(1)
-  h1
-    a
-      display: block
-      +replace-text-with-dimensions("mm-blue-w-text.png")
+  top: 0
+  header
+    margin-bottom: 10px
+    h1
+      margin: 20px 0 0 0
+      a
+        display: block
+        +replace-text-with-dimensions("mm-blue-w-text.png")
+        +border-radius(4px)
+    h4
+      display: none
+      text-align: center
+      font-size: 13px
+      line-height: 30px
+      margin: 0
+  nav
+    ul
+      li
+        font-size: 13px
+        line-height: 1.3
+        margin: 0 0 6px 0
+        a
+          text-decoration: none
+        &.div
+          border-top: 1px solid #c6bda8
+          padding-top: 6px
+    
+#main
+  +column(15, true)
+  float: right
+  h1:first-child
+    margin-top: 14px
+  pre
+    background: #F8F8F8
+    +box-shadow(darken(#c6bda8, 15) 0 1px 1px inset, white 0 1px 0)
+    padding: 0.5em 1em
+    margin: 1.5em 0
+    +border-radius(4px)
+  footer  
+    border-top: 1px solid #c6bda8
+    background: #c6bda8
+    padding: 1em 0
+    text-align: center
 
 footer
-  border-top: 1px solid #ccc
-  padding: 1em 0
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif
+  font-size: 10px
