--- a/source/layout.slim
+++ b/source/layout.slim
@@ -5,7 +5,6 @@ html
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
     
     == stylesheet_link_tag :site
-    == stylesheet_link_tag "pygments/solarized"
     
     title
       | Middleman: 
@@ -55,6 +54,8 @@ html
           - if is_guide_page?
             footer
               == link_to "Fork and edit this guide on Github", edit_guide_url
+
+    == javascript_include_tag "site"
 
     | <!-- Google Analytics -->
     | <script type="text/javascript">
