--- a/source/layout.slim
+++ b/source/layout.slim
@@ -9,7 +9,7 @@ html
     title
       | Middleman: 
       - if data.page.title
-        | #{data.page.title}
+        == data.page.title
       - else
         | Hand-crafted frontend development
     
