--- a/source/layout.slim
+++ b/source/layout.slim
@@ -5,6 +5,7 @@ html
     meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible"
     
     == stylesheet_link_tag :site
+    script src="/mint/?js" type="text/javascript"
     
     title
       | Middleman: 
