--- a/source/built-using-middleman.html.slim
+++ b/source/built-using-middleman.html.slim
@@ -1,17 +1,36 @@
 h1 Sites Built Using Middleman
 
 ul
-  li http://awardwinningfjords.com/
-  li http://pixelunion.net/
-  li http://syrinxoon.net/
-  li http://nathanleray.me
-  li http://dbooom.com/themes/html/stronghold/
-  li http://www.inkwellian.com/
-  li http://tactless.inkwellian.com/
-  li http://www.zoodotcom.com/
-  li http://www.space150.com/
-  li http://www.flotsam.nl/
-  li http://mongoid.org/
+  li
+    a href='http://awardwinningfjords.com/' Award-Winning Fjords 
+    ' - Thomas Reynolds`s blog
+  li
+    a href='http://pixelunion.net/' PixelUnion 
+    ' - Web themes
+  li
+    a href='http://syrinxoon.net/' Syrinxoon Web Development
+  li
+    a href='http://nathanleray.me' Nathan Le Ray 
+    ' - Portfolio
+  li
+    a href="http://dbooom.com/themes/html/stronghold/" Stronghold 
+    ' - HTML5 Theme
+  li
+    a href="http://www.inkwellian.com/" Inkwellian Theatre 
+    ' - Site of cartoonist, designer, and web developer, Matt McCray
+  li
+    a href="http://tactless.inkwellian.com/" Tactless Webcomic
+  li
+    a href="http://www.zoodotcom.com/" ZooDotCom Webcomic
+  li
+    a href="http://www.space150.com/" space150 
+    ' - Digital agency
+  li
+    a href="http://www.flotsam.nl/" flotsam.nl
+  li
+    a href='http://mongoid.org/' Mongoid.org 
+    ' - Site for Mongoid, a Ruby Object-Document-Mapper for 
+    a href="http://www.mongodb.org/" MongoDB
 
 footer
   == link_to "Fork and add your site on Github", "https://github.com/tdreyno/middleman-guides/blob/master/source/built-using-middleman.html.slim"
