speeding up article

--- a/source/layout.slim
+++ b/source/layout.slim
@@ -39,6 +39,7 @@ html
               /li== link_to "Static Blogs", "/guides/blogs"
               li== link_to "Custom Extensions", "/guides/extensions"
               li== link_to "Rack Middleware", "/guides/rack-middleware"
+              li== link_to "Speeding Things Up", "/guides/speeding-up"
           
               li.div== link_to "Sites Built Using Middleman", "/built-using-middleman"
               li== link_to "Community Extensions", "/community-extensions"
