--- a/source/built-using-middleman.html.slim
+++ b/source/built-using-middleman.html.slim
@@ -1,7 +1,6 @@
 h1 Sites Built Using Middleman
 
 ul
-  li http://awardwinningfjords.com/
   li http://pixelunion.net/
   li http://syrinxoon.net/
   li http://nathanleray.me
@@ -13,6 +12,11 @@ ul
   li http://www.flotsam.nl/
   li http://mongoid.org/
   li http://redbullmusicacademy.com/worldtour/
+
+h1 Blogs Using Middleman
+
+ul
+  li http://awardwinningfjords.com/
 
 footer
   == link_to "Fork and add your site on Github", "https://github.com/tdreyno/middleman-guides/blob/master/source/built-using-middleman.html.slim"
