--- a/source/layout.slim
+++ b/source/layout.slim
@@ -35,11 +35,12 @@ html
               li== link_to "Individual Page Configuration", "/guides/individual-page-configuration"
               li== link_to "LiveReload", "/guides/livereload"
               li== link_to "Local YAML Data", "/guides/local-yaml-data"
-              /li== link_to "Remote Data Sources (REST)", "/guides/remote-data"
-              /li== link_to "Static Blogs", "/guides/blogs"
               li== link_to "Custom Extensions", "/guides/extensions"
               li== link_to "Rack Middleware", "/guides/rack-middleware"
               li== link_to "Speeding Things Up", "/guides/speeding-up"
+              
+              li.div== link_to "Blog Extension", "/guides/blog"
+              /li== link_to "Remote Data Sources (REST)", "/guides/remote-data"
           
               li.div== link_to "Sites Built Using Middleman", "/built-using-middleman"
               li== link_to "Community Extensions", "/community-extensions"
