--- a/source/layout.slim
+++ b/source/layout.slim
@@ -40,7 +40,7 @@ html
               li== link_to "Speeding Things Up", "/guides/speeding-up"
               
               li.div== link_to "Blog Extension", "/guides/blog"
-              /li== link_to "Remote Data Sources (REST)", "/guides/remote-data"
+              li== link_to "Remote API Proxy", "/guides/remote-api"
           
               li.div== link_to "Sites Built Using Middleman", "/built-using-middleman"
               li== link_to "Community Extensions", "/community-extensions"
