--- a/source/layout.slim
+++ b/source/layout.slim
@@ -27,7 +27,7 @@ html
               li== link_to "Getting Started", "/guides/getting-started"
               li== link_to "Migrating to Middleman 2.0", "/guides/migrating"
               li== link_to "Templates, Layouts &amp; Partials", "/guides/templates-layouts-partials"
-              li== link_to "Templates Helpers", "/guides/helpers"
+              li== link_to "Template Helpers", "/guides/helpers"
               li== link_to "Sass and Compass", "/guides/sass-and-compass"
               li== link_to "CoffeeScript &amp; Sprockets", "/guides/coffeescript-sprockets"
               li== link_to "Dynamic Pages", "/guides/dynamic-pages"
