--- a/source/community-extensions.html.slim
+++ b/source/community-extensions.html.slim
@@ -5,6 +5,8 @@ ul
     | <a href="https://github.com/tdreyno/middleman-smusher">middleman-smusher</a> &mdash; Compress Images during Build
   li
     | <a href="https://github.com/matt-hh/middleman-jammit">middleman-jammit</a> &mdash; Use Jammit in Middleman
+  li
+    | <a href="https://github.com/follmann/middleman-favicon-maker">middleman-favicon-maker</a> &mdash; Generate favicon files in various sizes from a base image
 
 footer
   == link_to "Fork and add your extension on Github", "https://github.com/tdreyno/middleman-guides/blob/master/source/community-extensions.html.slim"
