--- a/source/layout.slim
+++ b/source/layout.slim
@@ -41,7 +41,9 @@ html
               li== link_to "Speeding Things Up", "/guides/speeding-up"
               
               li.div== link_to "Blog Extension", "/guides/blog"
+              li== link_to "Localization (i18n)", "/guides/localization"
               li== link_to "Remote API Proxy", "/guides/remote-api"
+              li== link_to "LiveReload", "/guides/livereload"
           
               li.div== link_to "Sites Built Using Middleman", "/built-using-middleman"
               li== link_to "Community Extensions", "/community-extensions"
