fix sidebar to always show entire nav (by using an absolute - instead of fixed - position, and by setting a minimum height)

--- a/source/stylesheets/site.css.sass
+++ b/source/stylesheets/site.css.sass
@@ -32,9 +32,10 @@ body
 .container
   +pie-clearfix
   position: relative
+  min-height: 950px
 
 aside
-  position: fixed
+  position: absolute
   width: 225px
   top: 0
   header
