rename some stuff

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -32,8 +32,9 @@ body {
   position: relative; }
 
 aside {
-  position: fixed;
   width: 225px;
+  float: left;
+  display: inline;
   top: 0;
   header {
     margin-bottom: 10px;
