--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,7 +32,7 @@
           </nav>
           
           <footer>
-            <a href="http://www.pledgie.com/campaigns/15807" style="display: block; width: 149px; margin: 0 auto;">
+            <a href="http://www.pledgie.com/campaigns/15807">
               <img src="http://www.pledgie.com/campaigns/15807.png" alt="Click here to lend your support to Middleman">
             </a>
           </footer>
