--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -5,16 +5,10 @@ markdown:
 
   Middleman is a static site generator based on Sinatra. Providing dozens of templating languages (Haml, Sass, Compass, Slim, CoffeeScript, and more). Makes minification, compression, cache busting, Yaml data (and more) an easy part of your development cycle.
 
-  In the left-hand column are links to the guides on how to use, configure and extend Middleman.
-
-  Bugs can be reported on the [Github Issue Tracker].
-
-  [Follow Middleman on Twitter].
+  Bugs can be reported on the [Github Issue Tracker]. [Follow Middleman on Twitter].
   
   [Github Issue Tracker]: https://github.com/middleman/middleman/issues
   [Follow Middleman on Twitter]: https://twitter.com/#!/middlemanapp
-  
-  ## Tutorials
 
 .tutorials
   - data.nav.each do |g|
