--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -57,17 +57,28 @@ aside {
   }
   nav {
     ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
       li {
         font-size: 13px;
         line-height: 1.3;
         margin: 0 0 6px 0;
+        h6 {
+          margin-top: 1.5em;
+          margin-bottom: 0.75em;
+        }
         a {
           text-decoration: none; }
-        &.div {
-          border-top: 1px solid #c6bda8;
-          padding-top: 6px; }
+        ul {
+          list-style-type: disc;
+          padding: 0 0 0 1.5em;
+        }
       }
     }
+  }
+  footer {
+    margin: 20px 0;
   }
 }
     
@@ -102,4 +113,24 @@ aside {
 footer {
   font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Verdana, sans-serif;
   font-size: 10px;
+}
+
+.tutorials {
+  @include pie-clearfix;
+  .block {
+    @include column(7);
+    &:nth-child(even) {
+      @include prepend(1);
+      @include column(7, true);
+    }
+    h3 {
+      margin-bottom: 0.5em;
+    }
+    p {
+//      display: none;
+    }
+    ul {
+      
+    }
+  }
 }
