Update syntax highlighting demo and add overflow:auto to code blocks so they don't get cut off

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -92,6 +92,7 @@ aside {
     @include box-shadow(darken(#c6bda8, 15) 0 1px 1px inset, white 0 1px 0);
     padding: 0.5em 1em;
     margin: 1.5em 0;
+    overflow: auto;
     @include border-radius(4px); }
   footer {
     border-top: 1px solid #c6bda8;
