--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -124,14 +124,16 @@ footer {
       @include prepend(1);
       @include column(7, true);
     }
+    &:nth-child(odd) {
+      clear: left;
+    }
     h3 {
-      margin-bottom: 0.5em;
+      margin-bottom: 0.1em;
     }
     p {
-//      display: none;
+      margin-bottom: 0.5em;
     }
     ul {
-      
     }
   }
 }
