Added middleman-target to community extensions page

--- a/source/community/3rd-party-extensions.html.erb
+++ b/source/community/3rd-party-extensions.html.erb
@@ -13,6 +13,10 @@
     <a href="https://github.com/follmann/middleman-favicon-maker">middleman-favicon-maker</a>
     &mdash; Generate favicon files in various sizes from a base image
   </li>
+  <li>
+    <a href="https://github.com/xunker/middleman-target">middleman-target</a>
+    &mdash; Create and build source for separate build targets.
+  </li>
 </ul>
 
 <footer>
