--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -15,6 +15,7 @@
   <li><a href="http://www.cedexis.com/" target="_blank">http://www.cedexis.com/</a></li>
   <li><a href="http://www.cassiegreer.com/" target="_blank">http://www.cassiegreer.com/</a></li>
   <li><a href="http://www.bigboulderconf.com/" target="_blank">http://www.bigboulderconf.com/</a></li>
+  <li><a href="http://scottjurek.com/" target="_blank">http://www.scottjurek.com</a></li>
   <li><a href="http://sskb.umn.edu/" target="_blank">http://sskb.umn.edu/</a></li>
   <li><a href="https://www.findbigmail.com/" target="_blank">https://www.findbigmail.com/</a></li>
   <li><a href="http://susy.oddbird.com/" target="_blank">http://susy.oddbird.com/</a></li>
