added sleede.com to sites list

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -20,6 +20,7 @@
   <li><a href="http://sskb.umn.edu/" target="_blank">http://sskb.umn.edu/</a></li>
   <li><a href="https://www.findbigmail.com/" target="_blank">https://www.findbigmail.com/</a></li>
   <li><a href="http://susy.oddbird.com/" target="_blank">http://susy.oddbird.com/</a></li>
+  <li><a href="http://sleede.com/" target="_blank">http://sleede.com/</a></li>
 </ul>
 
 <h1>Blogs Using Middleman</h1>
