--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <%= javascript_include_tag "modernizr.custom" %>
     <%= stylesheet_link_tag "site" %>
     <title><%= page_title %></title>
   </head>
@@ -22,7 +21,7 @@
                 <li>
                   <h6><%= g.name %></h6>
                   <ul>
-                    <% g.pages.each_with_index do |p, i| %>
+                    <% pages_for_group(g.name).each_with_index do |p, i| %>
                       <li><%= link_to p.title, p.path %></li>
                     <% end %>
                   </ul>
@@ -52,6 +51,9 @@
         </article>
       </div>
     </div>
+    
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/javascripts/jquery-1.7.2.js"><\/script>')</script>
 
     <%= javascript_include_tag "site" %>
     <script>
