Removing hosting info

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -43,8 +43,7 @@
           <footer>
             <p class="left">
               &copy; 2011&nbsp;
-              <a href="http://awardwinningfjords.com">Thomas Reynolds</a>.&nbsp;
-              Hosting provided by <a href="http://phpfog.com">PHP Fog</a>
+              <a href="http://awardwinningfjords.com">Thomas Reynolds</a>.
             </p>
             <p class="right"><%= link_to "Fork and edit this guide on Github", edit_guide_url %></p>
           </footer>
