Switch to JS highlighter

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -51,6 +51,10 @@
       </div>
     </div>
     
+    <%= javascript_include_tag "highlight.pack" %>
+    <%= stylesheet_link_tag "solarized_light" %>
+    <script>hljs.initHighlightingOnLoad();</script>
+    
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="/javascripts/jquery-1.7.2.js"><\/script>')</script>
 
