--- a/source/layouts/home.erb
+++ b/source/layouts/home.erb
@@ -4,52 +4,29 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <%= stylesheet_link_tag "site" %>
+    <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Questrial|Arvo" %>
     <title><%= page_title %></title>
   </head>
   <body>
-    <div id="frame">
-      <div class="container">
-        <aside>
-          <header>
-            <h1><%= link_to "Middleman", "/", {class: 'logo'} %></h1>
-            <h4>Hand-crafted frontend development</h4>
-          </header>
+    <header id="header">
+      <h1><%= link_to "Middleman", "/", {class: 'logo'} %></h1>
+      <h2>makes developing websites simple</h2>
+    </header>
 
-          <nav>
-              <% data.nav.each do |g| %>
-                <div>
-                  <h3><%= g.name %></h3>
-                  <p><%= g.desc %></p>
-                  <ul>
-                    <% pages_for_group(g.name).each_with_index do |p, i| %>
-                      <li><%= link_to p.title, p.path %></li>
-                    <% end %>
-                  </ul>
-                </div>
-              <% end %>
-          </nav>
-          
-          <footer>
-            <a href="http://www.pledgie.com/campaigns/15807">
-              <img src="http://www.pledgie.com/campaigns/15807.png" alt="Click here to lend your support to Middleman">
-            </a>
-          </footer>
-        </aside>
-              
-        <article id="main" role="main">
+        <section role="main">
           <%= yield %>
           
-        </article>
-      </div>
-    </div>
+        </section>
     <footer id="footer">
       <div class="inner">
+        
       <p class="copyright">
         &copy; 2011&nbsp;
         <a href="http://awardwinningfjords.com">Thomas Reynolds</a>.
       </p>
       <p class="link"><%= link_to "Fork and edit this guide on Github", edit_guide_url %></p>
       </div>
+
     </footer>
     
     <%= javascript_include_tag "highlight.pack" %>
