--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,7 @@
-<h1>Middleman Guides</h1>
+---
+layout: home.erb
+---
 
-<p>Welcome to the Middleman documentation site.</p>
-
-<p>Middleman is a static site generator based on Sinatra. Providing dozens of templating languages (Haml, Sass, Compass, Slim, CoffeeScript, and more). Makes minification, compression, cache busting, Yaml data (and more) an easy part of your development cycle.</p>
-
-<p>Bugs can be reported on the <a href="https://github.com/middleman/middleman/issues">Github Issue Tracker</a>. <a href="https://twitter.com/middlemanapp">Follow Middleman on Twitter</a>.</p>
 
 <div class="tutorials">
   <% data.nav.each do |g| %>
