new homepage layout

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,6 +2,11 @@
 layout: home.erb
 ---
 
+<div id="install">
+  <p><b>gem install middleman</b></p>
+</div>
+
+<div id="frame" class="container">
 
 <div class="tutorials">
   <% data.nav.each do |g| %>
@@ -15,4 +20,6 @@ layout: home.erb
       </ul>
     </div>
   <% end %>
+</div>
+
 </div>
